--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                 <span><a href="https://github.com/mageshwaran7"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/40C057/github.png" alt="github"/></span></a>
                 <span><a href="https://wa.me/916374214336" target="_blank"><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/40C057/whatsapp--v1.png" alt="whatsapp--v1"/></span></a>
                 <span><a href=""></a><img width="50" height="50" src="https://img.icons8.com/ios-filled/50/40C057/twitterx--v1.png" alt="twitterx--v1"/></span></a>
+                <p>Tap the icons above to access my profile links.</p>
             </div>
         </div>
 
